[UHMEP-1960] Add recommendations-detail component to be able to display PSS recommendations...

--- a/reuse/code/components/error-card/error-card.component.html
+++ b/reuse/code/components/error-card/error-card.component.html
@@ -1,5 +1,12 @@
 <mat-card appearance="outlined" class="error-card">
+  @if(title) {
+    <mat-card-title>
+      {{ title | translate }}
+    </mat-card-title>
+  }
+
   <mat-card-content [className]="'message'">
+
     @if(genericErrorMsgKey) {
       {{ genericErrorMsgKey | translate }}
     }
