--- a/reuse/code/components/pss-radiology-result/pss-radiology-result.component.scss
+++ b/reuse/code/components/pss-radiology-result/pss-radiology-result.component.scss
@@ -22,40 +22,40 @@
     }
 
     &.pss-score-1 {
-      width: calc(25px * 1);
+      width: calc(20px * 1);
     }
 
     &.pss-score-2 {
-      width: calc(25px * 2);
+      width: calc(20px * 2);
     }
 
     &.pss-score-3 {
-      width: calc(25px * 3);
+      width: calc(20px * 3);
     }
 
     &.pss-score-4 {
-      width: calc(25px * 4);
+      width: calc(20px * 4);
     }
 
     &.pss-score-5 {
-      width: calc(25px * 5);
+      width: calc(20px * 5);
     }
 
     &.pss-score-6 {
-      width: calc(25px * 6);
+      width: calc(20px * 6);
     }
 
     &.pss-score-7 {
-      width: calc(25px * 7);
+      width: calc(20px * 7);
     }
 
     &.pss-score-8 {
-      width: calc(25px * 8);
+      width: calc(20px * 8);
     }
   }
 }
 
-.mat-mdc-row .mat-mdc-cell {
+.mat-mdc-row.row-is-clickable .mat-mdc-cell {
   cursor: pointer;
 }
 
@@ -64,10 +64,19 @@
   background-color: #03a9f4;
 }
 
+.row-is-selected {
+  font-weight: bold;
+  background-color: #e5e5e5;
+}
+
 .radiation-active {
   color: black;
 }
 
 .radiation-inactive {
   color: lightgrey;
+}
+
+::ng-deep .mat-column-radiationRate {
+  white-space: nowrap;
 }
