--- a/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
+++ b/wc-prescription-details/src/components/prescription-details/prescription-details.component.html
@@ -117,6 +117,9 @@
                   [lang]="lang"
                   [template]="viewState.data!.templateVersion"
                   [responses]="viewState.data!.decryptedResponses"
+                  [services]="services"
+                  [status]="status$.getValue()"
+                  [isProfessional]="isProfessional$()"
                 ></nihdi-referral-prescription-form-details>
               }
 
