--- a/wc-evf-form-details/src/components/evf-details/evf-form-details.component.html
+++ b/wc-evf-form-details/src/components/evf-details/evf-form-details.component.html
@@ -2,6 +2,10 @@
   *ngIf="elementGroup"
   [elementControls]="elementGroup.childElementControls"
   [options]="{showDividers: false, detailLayout: detailLayout}"
+  [metadata]="{
+    pssActive: status,
+    isProfessional : isProfessional
+    }"
 ></evf-form-detail-group>
 
 <ng-template #detailLayout let-content="content" let-label="label">
