--- a/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.scss
+++ b/wc-list-prescriptions/src/components/list-prescriptions/list-prescriptions.component.scss
@@ -63,6 +63,10 @@ $app-theme: mat.m2-define-light-theme((
   align-items: center;
   min-width: 195px;
 
+  span{
+    white-space: nowrap;
+  }
+
   mat-select {
     background-color: white;
     padding: 0.5rem;
