--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -28,7 +28,9 @@
 
   </div>
 
-  <app-overlay-spinner *ngIf="loading()"></app-overlay-spinner>
+  @if (loading()) {
+    <app-overlay-spinner></app-overlay-spinner>
+  }
 } @else {
   <app-error-card
     [message]="'common.errors.pseudoDisabled' | translate"
