--- a/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
+++ b/wc-create-prescription/src/components/create-prescription/create-prescription.component.html
@@ -1,6 +1,6 @@
 @if(isEnabled$ | async) {
   <div class="container">
-    @if (initialValues?.intent === 'model') {
+    @if (isModelValue) {
       <h2>{{'prescription.model.title' | translate}}</h2>
       <app-create-prescription-model
         [prescriptionForm]="prescriptionForms()[0]"
