Feature/uhmep 2074: add sonarqube

--- a/reuse/code/evf/medication/element/medication.component.html
+++ b/reuse/code/evf/medication/element/medication.component.html
@@ -12,7 +12,7 @@
     [elementControl]="elementControl"
   ></evf-element-help>
 
-  <mat-form-field [appearance]="appearance || 'fill'">
+    <mat-form-field [appearance]="appearance ?? 'fill'">
     <mat-label *ngIf="useMatLabel">{{element.labelTranslationId | evfLabel:elementControl.elementGroup}}</mat-label>
     <input
       matInput
