--- a/reuse/code/components/prescription-models-table/prescription-models-table.component.html
+++ b/reuse/code/components/prescription-models-table/prescription-models-table.component.html
@@ -48,7 +48,7 @@
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr [class.inactive]="row.status === 'DONE' || row.status === 'CANCELLED' || row.status === 'EXPIRED'"
+  <tr [class.inactive]="row.status === 'DONE' ?? row.status === 'CANCELLED' || row.status === 'EXPIRED'"
       [attr.data-cy]="'model-row-' + row.id"
       (click)="clickPrescriptionModel.emit(row)"
       mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
